--- a/prologin/prologin/templates/stub-mathjax.html
+++ b/prologin/prologin/templates/stub-mathjax.html
@@ -20,6 +20,4 @@
     },
   });
 </script>
-{# HACK: don't use static tag, because for some reason the ManifestStorage renaming breaks MathJax #}
-{# <script type="text/javascript" src="{% static 'lib/mathjax/MathJax.js' %}?config=TeX-AMS-MML_HTMLorMML"></script> #}
-<script type="text/javascript" src="{% get_setting 'STATIC_URL' %}/lib/mathjax/MathJax.js"></script>
+<script type="text/javascript" src="{% static 'vendor/mathjax/MathJax.js' %}?config=TeX-AMS-MML_HTMLorMML"></script>
