--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -12,8 +12,8 @@
 
   {# Google font, Boostrap, FontAwesome #}
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,700italic,300,300italic"/>
-  <link rel="stylesheet" href="{% static 'lib/css/bootstrap.min.css' %}"/>
-  <link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}"/>
 {% if request.session.is_hijacked_user %}
   {# User is being impersonated: include relevant styles #}
   <link rel="stylesheet" href="{% static 'hijack/hijack-styles.css' %}" />
@@ -105,8 +105,8 @@
   </footer>
 
   {# Scripts #}
-  <script src="{% static 'lib/js/jquery.min.js' %}"></script>
-  <script src="{% static 'lib/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
   <script type="application/javascript">
   $(function() {
     $('.modal[role="dialog"]').modal();
@@ -115,7 +115,7 @@
   {% has_perm 'users.search' request.user as can_search_users %}
   {% if can_search_users %}
   {# User can search users: include JS for typeahead #}
-  <script src="{% static 'lib/js/typeahead.jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/corejs-typeahead/dist/typeahead.jquery.min.js' %}"></script>
   <script type="application/javascript">
     var SEARCH_USER_EMPTY = "{% trans "No user matching query"|escapejs %}",
       SEARCH_USER_URL = "{% url 'users:search-suggest' %}";
