--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -47,7 +47,7 @@
 					<ul>
 						{% with years="2018 2017 2016 2015 2014" %}
 							{% for year in years.split %}
-								<li><a href="{% url 'gcc:editions' year=year %}">Édition {{year}}</a></li>
+								<li><a href="{% url 'gcc:editions' %}#edition-{{year}}">Édition {{year}}</a></li>
 							{% endfor %}
 						{% endwith %}
 					</ul>
