--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -6,7 +6,8 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: white;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+               "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 300;
   font-size: 1em;
   color: #494949;
