gcc: move template static files ; remove old styles

--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -13,10 +13,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}" />
-		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/grid.css' %}" />
-		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/main.css' %}" />
-		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/layout.css' %}" />
-		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/responsive.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/css/grid.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/css/layout.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/css/responsive.css' %}" />
 		{% block head %}{% endblock %}
 	</head>
 	<body>
@@ -107,11 +107,11 @@
 		</section>
 
 		<!-- Scripts -->
-		<script src="{% static 'gcc/escape-velocity/js/jquery.min.js' %}"></script>
-		<script src="{% static 'gcc/escape-velocity/js/jquery.dropotron.min.js' %}"></script>
-		<script src="{% static 'gcc/escape-velocity/js/browser.min.js' %}"></script>
-		<script src="{% static 'gcc/escape-velocity/js/breakpoints.min.js' %}"></script>
-		<script src="{% static 'gcc/escape-velocity/js/util.js' %}"></script>
-		<script src="{% static 'gcc/escape-velocity/js/main.js' %}"></script>
+		<script src="{% static 'gcc/js/jquery.min.js' %}"></script>
+		<script src="{% static 'gcc/js/jquery.dropotron.min.js' %}"></script>
+		<script src="{% static 'gcc/js/browser.min.js' %}"></script>
+		<script src="{% static 'gcc/js/breakpoints.min.js' %}"></script>
+		<script src="{% static 'gcc/js/util.js' %}"></script>
+		<script src="{% static 'gcc/js/main.js' %}"></script>
 	</body>
 </html>
