gcc: rework grids using CSS's display: grid

--- a/prologin/gcc/templates/gcc/editions/index.html
+++ b/prologin/gcc/templates/gcc/editions/index.html
@@ -8,7 +8,7 @@
 			<div class="title">Édition 2018</div>
 
 			<div class="cotainer">
-				<div class="row">
+				<div class="row irr_10rem_1fr">
 					<div class="off-1 col-2 col-4-medium off-0-small col-12-small" style="text-align: center;">
 						<a href="{{url}}" style="max-width: 300px;">
 							<img src="{% static 'gcc/img/posters/2018.full.jpg' %}" style="max-width: 100%;" />
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="title">Édition 2017</div>
 
-			<div class="row">
+			<div class="row irr_1fr_10rem">
 				<div class="off-1 col-8 col-8-medium off-0-small col-12-small">
 					<div style="min-height: 100%; text-align:left;">
 						<p style="font-size: 1.1em;">
