--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -31,8 +31,8 @@
 		<div class="title">Commencer</div>
 
 		<div class="container">
-			<div class="row aln-center">
-				<div class="col-4 col-12-medium">
+			<div class="row reg_20rem">
+				<div>
 					<section class="highlight">
 						{% with url="http://www.france-ioi.org/" %}
 						<a target="_blank" href="{{url}}" class="image featured">
@@ -49,7 +49,7 @@
 						{% endwith %}
 					</section>
 				</div>
-				<div class="col-4 col-12-medium">
+				<div>
 					<section class="highlight">
 						{% with url="https://www.codecademy.com/fr" %}
 						<a target="_blank" href="{{url}}" class="image featured">
@@ -84,7 +84,7 @@
 			</div>
 
 					<div class="feature-list">
-						<section class="row">
+						<section class="row irr_10rem_1fr">
 							{% with url="https://djangogirls.org/" %}
 							<div class="img-container col-3 col-4-medium off-0-small col-12-small">
 								<a href="{{url}}">
@@ -101,7 +101,7 @@
 							</div>
 							{% endwith %}
 						</section>
-						<section class="row">
+						<section class="row irr_10rem_1fr">
 							<div class="img-container col-3 col-4-medium off-0-small col-12-small">
 								<a href="{% url 'home' %}">
 									<img src="{% static 'img/logo_cube.png' %}" />
