--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -1,20 +1,20 @@
 /* Forum style */
 
-.post-content .pyg-hltable {
+.post-content .codehilitetable {
   margin: 0 0 10px 0; /* same as p */
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   border-radius: 3px;
 }
 
-.post-content .pyg-hltable pre {
+.post-content .codehilitetable pre {
   border-radius: 3px;
 }
 
-.post-content .pyg-hltable .pyg-hl {
+.post-content .codehilitetable .codehilite {
   border-radius: 0 3px 3px 0;
 }
 
-.post-content .pyg-hltable .linenos {
+.post-content .codehilitetable .linenos {
   background: #272822;
   color: #f8f8f2;
   border-radius: 3px 0 0 3px;
