gcc: continue transition new grid system

--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -83,8 +83,8 @@
 			<div class="container">
 				<div class="title">Contact</div>
 				<section class="feature-list small">
-					<div class="row">
-						<section class="col-6 col-12-small">
+					<div class="row reg_20rem">
+						<section>
 							<h3 class="icon fa-home">Adresse</h3>
 							<p>
 								Association Prologin<br />
@@ -92,7 +92,7 @@
 								94270 Le Kremlin Bicêtre
 							</p>
 						</section>
-						<section class="col-6 col-12-small">
+						<section>
 							<h3 class="icon fa-comment">Social</h3>
 							<p>
 								<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.facebook.com/stagegirlscancode"><i class="icon fa-facebook" style=""></i></a>
@@ -100,13 +100,13 @@
 								<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.flickr.com/photos/prologin"><i class="icon fa-flickr" style=""></i></a>
 							</p>
 						</section>
-						<section class="col-6 col-12-small">
+						<section>
 							<h3 class="icon fa-envelope">Email</h3>
 							<p>
 								<a href="mailto:info@prologin.org">info@prologin.org</a>
 							</p>
 						</section>
-						<section class="col-6 col-12-small">
+						<section>
 							<h3 class="icon fa-phone">Téléphone</h3>
 							<p>
 								+331 44 08 01 90
