--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -180,11 +180,11 @@
 				<section>
 					<form method="post">
 						{% csrf_token %}
-						<div class="row gtr-50">
-							<div class="col-8 off-0-small col-12-small">
-								<input type="text" name="email" placeholder="Email" style="height: 60px" />
+						<div class="row reg_20rem">
+							<div>
+								<input type="text" name="email" placeholder="Email" style="height: 60px">
 							</div>
-							<div class="col-4 off-0-small col-12-small">
+							<div>
 								<ul class="actions">
 									<li><input type="submit" class="style1" value="S'inscrire à la newsletter" style="height: 60px" /></li>
 								</ul>
