--- a/prologin/gcc/static/gcc/css/main.css
+++ b/prologin/gcc/static/gcc/css/main.css
@@ -64,7 +64,7 @@ input::-moz-focus-inner {
 	padding: 0;
 }
 
-input, select, textarea {
+input:not(["type"="checkbox"]), select, textarea {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-appearance: none;
