Add Google Maps API key to contest center page
Google wants explicit API key when loading the Maps framework. This fixes #175.

--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -104,7 +104,7 @@
 {% endblock %}
 
 {% block extra_script %}
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk9fzbgveZQ8zPLkbhopSbZYb3UNQUMCg"></script>
   <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
   <script type="text/javascript">
     $(function () {
